welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:2: error: expected start of definition
override run {jardinireFleur()
         ^